changed template for bootstrap, added data-filter route

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-</head>
+    <% include templates/styletemplate.ejs %>
+    <% include templates/scripttemplate.ejs %>
 <body>
-<% include templetes/header.ejs %>
+<% include templates/header.ejs %>
 <h1>Welcome to Hell</h1>>
 </body>
 </html>
