--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
+
+    <% include templates/styletemplate.ejs %>
+    <% include templates/scripttemplate.ejs %>
 </head>
 <body>
-<% include templetes/header.ejs %>
+<% include templates/header.ejs %>
 <h1>Welcome to the Jungle</h1>>
 </body>
 </html>
