added current page styling in navbar & dropdown on avatar click

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/dashboard">Dashboard</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/help">Help</a></li>
@@ -29,7 +29,7 @@
       <ul class="nav navbar-nav navbar-right">
 
         <li class="dropdown">
-          <img src="https://avatars0.githubusercontent.com/u/9412441?v=3&u=db6bfa2b4d5ba5902ef94d2e12106bfae4bf69ae" alt="user-image" class="img-circle img-responsive vcenter" style="width: 4rem; border: 1px dashed #000000; display:inline-block;">
+          <img data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" src="https://avatars0.githubusercontent.com/u/9412441?v=3&u=db6bfa2b4d5ba5902ef94d2e12106bfae4bf69ae" alt="user-image" class="img-circle img-responsive vcenter" style="width: 4rem; border: 1px dashed #000000; display:inline-block;">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="display:inline-block;">user<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Settings</a></li>
