--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Login</title>
 
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
@@ -22,6 +22,5 @@
         <input type="submit" value="Login">
     </p>
 </form>
-
 </body>
 </html>
