--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">CoDr</a>
+      <a class="navbar-brand" href="/">CoDr</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,7 +34,6 @@
           <ul class="dropdown-menu">
             <li><a href="#">Settings</a></li>
             <li><a href="#">Activity log</a></li>
-            <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Log Out</a></li>
           </ul>
