fixed login and signup, added sql creation script

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,6 +6,11 @@
 
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
+    <style>
+        form{
+            margin-top: 6rem;
+        }
+    </style>
 </head>
 <body>
     <% include templates/header.ejs %>
