--- a/views/deleteAccount.ejs
+++ b/views/deleteAccount.ejs
@@ -14,17 +14,9 @@
 </head>
 <body>
 <% include templates/header.ejs %>
-<form method="post" action="/login">
+<form method="post" action="/remove">
     <p>
-        <label>email:</label>
-        <input type="text" name="user_email">
-    </p>
-    <p>
-        <label>password:</label>
-        <input type="text" name="user_password">
-    </p>
-    <p>
-        <input type="submit" value="Login">
+        <input type="submit" value="delete">
     </p>
 </form>
 </body>
