--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,12 +16,20 @@
     <% include templates/header.ejs %>
     <form method="post" action="/signup">
         <p>
+            <label>user_firstname:</label>
+            <input type="text" name="user_firstname">
+        </p>
+        <p>
+            <label>user_lastfirstname:</label>
+            <input type="text" name="user_lastname">
+        </p>
+        <p>
             <label>email:</label>
-            <input type="text" name="email">
+            <input type="text" name="user_email">
         </p>
         <p>
             <label>password:</label>
-            <input type="text" name="password">
+            <input type="text" name="user_password">
         </p>
         <p>
             <input type="submit" value="signup">
