--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -35,7 +35,8 @@
             <li><a href="#">Settings</a></li>
             <li><a href="#">Activity log</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="/logout">Log Out</a></li>
+            <li><a href="/remove">DeleteAccount</a></li>
           </ul>
         </li>
       </ul>
