--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,19 +16,19 @@
     <% include templates/header.ejs %>
     <form method="post" action="/signup">
         <p>
-            <label>user_firstname:</label>
+            <label>First Name:</label>
             <input type="text" name="user_firstname">
         </p>
         <p>
-            <label>user_lastfirstname:</label>
+            <label>Last Name:</label>
             <input type="text" name="user_lastname">
         </p>
         <p>
-            <label>email:</label>
+            <label>Email:</label>
             <input type="text" name="user_email">
         </p>
         <p>
-            <label>password:</label>
+            <label>Password:</label>
             <input type="text" name="user_password">
         </p>
         <p>
