--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,20 @@
-body {
-  /*padding: 50px;*/
+/*body {
+  //padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+}*/
 
 a {
   color: #00B7FF;
 }
 nav{
-	height: 5rem;
-    font-size: 1.8rem;
+	height: 3rem;
+    font-size: 1.3rem;
+}
+
+.inlined-element{
+	display: inline-block;
+}
+
+.translate10{
+	margin-top: 10rem;
 }
