--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,24 +8,33 @@
     <% include templates/scripttemplate.ejs %>
     <style>
         form{
-            margin-top: 6rem;
+            margin-top: 3rem;
         }
     </style>
 </head>
 <body>
 <% include templates/header.ejs %>
-<form method="post" action="/login">
-    <p>
-        <label>email:</label>
-        <input type="text" name="user_email">
-    </p>
-    <p>
-        <label>password:</label>
-        <input type="text" name="user_password">
-    </p>
-    <p>
-        <input type="submit" value="Login">
-    </p>
-</form>
+
+<div class="row translate10">
+    <div class="col-md-10 col-md-offset-1">
+        <div class="panel panel-default">
+            <form class="panel-body" method="post" action="/login">
+                <h3>Welcome back !</h3>
+                <p>
+                    <label>email:</label>
+                    <input type = "text" class = "form-control inlined-element" name="user_email" placeholder = "Enter Name">
+                </p>
+                <p>
+                    <label>password:</label>
+                    <input type = "text" class = "form-control inlined-element" name="user_password" placeholder = "Enter Name">
+                </p>
+                <p>
+                    <input type="submit" class = "btn btn-default" value="Login">
+                </p>
+            </form>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
