--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,10 @@
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }*/
 
+/***********General styles*******************/
+body{
+	overflow-x: hidden;
+}
 a {
   color: #00B7FF;
 }
@@ -17,4 +21,26 @@ nav{
 
 .translate10{
 	margin-top: 10rem;
+}
+
+.z-depth-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.z-depth-1:hover {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+
+/******Navbar styling********************************/
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+    .navbar-collapse.collapse.in{
+        background-color: #FBFBFB; /*very slow*/
+    }
+    .navbar-form.navbar-left[role=search] .form-group{
+    	width: 80%;
+    	display: inline-block;
+    }
 }
