--- a/views/templates/styletemplate.ejs
+++ b/views/templates/styletemplate.ejs
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width">
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <!-- <link rel="stylesheet" href="stylesheets/bootstrap.min.css"> -->
