addded person filter

--- a/views/personFilter.ejs
+++ b/views/personFilter.ejs
@@ -26,7 +26,7 @@
                 </p>
                 <p>
                     <label>completedTasks:</label>
-                    <input type = "text" class = "form-control inlined-element" name="TASKS_COMPLETED_COUNTER" placeholder = "greater than">
+                    <input type = "text" class = "form-control inlined-element" name="tasks_completed_counter" placeholder = "greater than">
                 </p>
                 <p>
                     <input type="submit" class = "btn btn-default" value="getJson">
