added support for normal dates, improved person filter

--- a/views/personFilter.ejs
+++ b/views/personFilter.ejs
@@ -29,6 +29,14 @@
                     <input type = "text" class = "form-control inlined-element" name="tasks_completed_counter" placeholder = "greater than">
                 </p>
                 <p>
+                    <label>date1:</label>
+                    <input type = "text" class = "form-control inlined-element" name="date1" placeholder = "Enter date1">
+                </p>
+                <p>
+                    <label>date2:</label>
+                    <input type = "text" class = "form-control inlined-element" name="date2" placeholder = "Enter date2">
+                </p>
+                <p>
                     <input type="submit" class = "btn btn-default" value="getJson">
                 </p>
             </form>
