--- a/views/solvedTasksFiltering.ejs
+++ b/views/solvedTasksFiltering.ejs
@@ -19,36 +19,63 @@
     <div class="col-md-10 col-md-offset-1">
         <div class="panel panel-default">
             <form class="panel-body" method="post" action="/datafiltering/solvedTasksFilter">
-                <p>
-                    <label>hasSolution:</label>
-                    <input type = "text" class = "form-control inlined-element" name="hasSolution" placeholder = "Enter SolEx">
-                </p>
-                <p>
+
                     <label>name:</label>
                     <input type = "text" class = "form-control inlined-element" name="task_name" placeholder = "Enter name">
-                </p>
-                <p>
-                    <label>date:</label>
-                    <input type = "text" class = "form-control inlined-element" name="completeddate" placeholder = "Enter date">
-                </p>
-                <p>
-                    <input type="submit" class = "btn btn-default" value="getJson">
-                </p>
-            </form>
-        </div>
 
+                    <label>hasSolution:</label>
+                    <input type = "text" class = "form-control inlined-element" name="hasSolution" placeholder = "Enter SolEx">
+
+                    <label>date1:</label>
+                    <input type = "text" class = "form-control inlined-element" name="date1" placeholder = "DD/MM/YY">
+
+
+                    <label>date2:</label>
+                    <input type = "text" class = "form-control inlined-element" name="date2" placeholder = "DD/MM/YY">
+
+
+                    <label>rowsToFetch</label>
+                    <input type = "number" class = "form-control inlined-element" name="max" placeholder = "Enter rows" required>
+
+                    <input type="submit" class = "btn btn-default" value="getJson">
+            </form>
+            <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+            <script type="text/javascript">
+                $(".panel-body").submit(function(e)
+                {
+                    var postData = $(this).serialize();
+                    var formURL = $(this).attr("action");
+                    var met=$(this).attr("method");
+                    $.ajax(
+                            {
+                                url : formURL,
+                                type: met,
+                                data : postData,
+                                datatype: "json",
+                                success:function(response)
+                                {
+                                    //   $(".col-md-6").append(JSON.stringify(response,null,3));
+                                    $(".col-md-6").wrapInner('<textarea>'+JSON.stringify(response,null,3)+'</textarea>');
+                                },
+                                error: function(jqXHR, textStatus, errorThrown)
+                                {
+                                    //handle error
+                                }
+                            });
+                    e.preventDefault();	//STOP default action
+                });
+            </script>
+        </div>
         <div class="form-horizontal">
             <div class="form-group">
                 <div class="col-md-6">
-                    <textarea class="form-control" rows="3" placeholder="json here" required></textarea>
+
                 </div>
             </div>
         </div>
 
     </div>
 </div>
-
-
 
 </body>
 </html>
