--- a/views/About.ejs
+++ b/views/About.ejs
@@ -6,7 +6,11 @@
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
 <body>
-<% include templates/header.ejs %>
+
+<% if(req.session.user_firstname){ console.log(req.session.user_firstname); %>
+<% include templates/demoHeader.ejs %>
+<%} else { %>
+<%console.log("hai pa"); }%>
 
 </body>
 </html>
