--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,56 +7,23 @@
 
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
-    <style>
-        form{
-            margin-top: 3rem;
-        }
-        /*body{
-            background-image: url("http://bgfons.com/upload/rainbow_texture679.jpg");
-        }*/
-        div.row.translate10:after{
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            position: absolute;
-            z-index: -1;
-            content: "";
-            background: url('/public/assets/background-texture-1.jpg');
-            background-size:cover;
-            opacity: 0.6;
-        }
-        label{
-            opacity: 0.6;
-        }
-        .bad-input-focus{
-            border-color: #E96666;
-            outline: 0;
-            -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-            box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(233, 102, 102, 0.6);
-        }
-        /*.form-control:focus {}
-        */
-        .custom-tooltip + .tooltip > .tooltip-inner {background-color: #F33232;}
-        .custom-tooltip + .tooltip > .tooltip-arrow {border-top-color: #F33232;}
-
-    </style>
+    <!--<style></style> -->
 </head>
 <body>
 <% include templates/header.ejs %>
 
-<div class="row translate10">
+<div class="row translate10 login-container">
     <div class="col-md-10 col-md-offset-1">
         <div class="panel panel-default z-depth-1">
             <form class="panel-body" method="post" action="/login">
                 <h3>Welcome back !</h3>
                 <p>
                     <label>EMAIL:</label>
-                    <input type = "text" class = "form-control inlined-element custom-tooltip" name="user_email" placeholder = "Enter your email" id="login-email" onblur="validateEmail()" data-toggle="tooltip" data-placement="top" title="" data-original-title="Please enter a valid email" data-trigger="manual" data-html="false">
+                    <input type = "text" class = "form-control inlined-element bad-tooltip" name="user_email" placeholder = "Enter your email" id="email" onblur="validateEmail()" data-toggle="tooltip" data-placement="top" title="" data-original-title="Please enter a valid email" data-trigger="manual" data-html="false">
                 </p>
                 <p>
                     <label>PASSWORD:</label>
-                    <input type = "password" class = "form-control inlined-element custom-tooltip" name="user_password" placeholder = "Enter your password" id="login-password" onblur="validatePassword()" data-toggle="tooltip" data-placement="top" title="" data-original-title="Please enter a password" data-trigger="manual" data-html="false">
+                    <input type = "password" class = "form-control inlined-element bad-tooltip" name="user_password" placeholder = "Enter your password" id="password" onblur="validatePassword()" data-toggle="tooltip" data-placement="top" title="" data-original-title="Please enter a password" data-trigger="manual" data-html="false">
                 </p>
                 <p>
                     <input type="submit" class = "btn btn-primary" value="Login">
@@ -66,46 +33,7 @@
     </div>
 </div>
 
-<script>
-function validateEmail() {
-    <%#var userEmail = document.getElementById("login-email").childNodes[0].nodeValue;#%>
-    
-    var userEmail = $("#login-email").val();
-    var userEmailObject = $("#login-email[data-toggle='tooltip']");
-
-    if(userEmail.indexOf("@") === -1 && userEmail.length < 31){
-        if( !(userEmailObject.hasClass("bad-input-focus")) ){
-            userEmailObject.tooltip('show');
-            userEmailObject.addClass("bad-input-focus");
-            <%#//console.log("Tooltip !");#%>
-        }
-    } else {
-        if(userEmailObject.hasClass("bad-input-focus")){
-            userEmailObject.tooltip('hide');
-            userEmailObject.removeClass("bad-input-focus");
-        }
-    }
-}
-
-function validatePassword(){
-    var userPassword = $("#login-password").val();
-    var userPasswordObject = $("#login-password[data-toggle='tooltip']");
-    
-    if(!userPassword){
-        if( !(userPasswordObject.hasClass("bad-input-focus")) ){
-            userPasswordObject.tooltip('show');
-            userPasswordObject.addClass("bad-input-focus");
-            <%# //console.log("Tooltip !"); #%>
-    } else {
-        if(userPasswordObject.hasClass("bad-input-focus")){
-            userPasswordObject.tooltip('hide');
-            userPasswordObject.removeClass("bad-input-focus");
-        }
-       }
-   }
-
-}
-</script>
+<script src="/public/javascripts/validations.js"></script>
 
 </body>
 </html>
