--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Signup</title>
+    <title><%= title %> - Signup</title>
 
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
