--- a/views/Help.ejs
+++ b/views/Help.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Help</title>
+    <title><%= title %> - Help</title>
 
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
