Added and updated routes, added winston logging

--- a/views/Admindash.ejs
+++ b/views/Admindash.ejs
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><%= title %> - Help</title>
+    <title><%= title %> - Admin dashboard</title>
 
     <% include templates/styletemplate.ejs %>
     <% include templates/scripttemplate.ejs %>
 </head>
 <body>
 <% include templates/header.ejs %>
-<p class="translate10">&nbsp;</p>
-<div class="container">
-	<h1>Help</h1>
-</div>
+
 
 </body>
 </html>
