--- a/views/Help-REST.ejs
+++ b/views/Help-REST.ejs
@@ -11,7 +11,7 @@
 <% include templates/header.ejs %>
 <p class="translate10">&nbsp;</p>
 <div class="container">
-	<h1>Help</h1>
+	<h1>Help - REST</h1>
 </div>
 
 </body>
