--- a/views/templates/header-login.ejs
+++ b/views/templates/header-login.ejs
@@ -18,7 +18,7 @@
                 <li><a href="/dashboard">Dashboard</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/help">Help</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/#contact">Contact</a></li>
             </ul>
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
@@ -32,11 +32,10 @@
                     <img data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" src="https://avatars0.githubusercontent.com/u/9412441?v=3&u=db6bfa2b4d5ba5902ef94d2e12106bfae4bf69ae" alt="user-image" class="img-circle img-responsive vcenter" style="width: 4rem; border: 1px dashed #000000; display:inline-block;">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="display:inline-block;"><%= user%><span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Settings</a></li>
-                        <li><a href="#">Activity log</a></li>
+                        <li><a href="/settings">Settings</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="/logout">Log Out</a></li>
-                        <li><a href="/remove">DeleteAccount</a></li>
+                        
                     </ul>
                 </li>
             </ul>
