--- a/views/templates/header-nologin.ejs
+++ b/views/templates/header-nologin.ejs
@@ -18,7 +18,7 @@
         <li><a href="/dashboard">Dashboard</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/help">Help</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/#contact">Contact</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
