--- a/views/Settings.ejs
+++ b/views/Settings.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
 <% include templates/header.ejs %>
-<form method="post" action="/remove">
+<form method="post" action="/settings">
     <p>
         <input type="submit" value="delete">
     </p>
